Fixed button layout jump

--- a/src/sass/partials/_admin-content.scss
+++ b/src/sass/partials/_admin-content.scss
@@ -144,6 +144,7 @@
     width: 40%;
     display: block;
     padding: 5%;
+    border: 2px solid white;
     border-radius: 8px;
     margin: auto;
     margin-bottom: 5%;
