--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -155,6 +155,7 @@ button {
     font-weight: bold;
     background-color: $button-colour;
     border-style: none;
+    border: 2px solid white;
     border-radius: 16px;
     padding: 7%;
     cursor: pointer;
